# mcp-gsc

./: gsc_server.py  pyproject.toml  requirements.txt  server_http.py
auth/: __init__.py  auth_info_middleware.py  credential_store.py  google_oauth_provider.py  google_remote_auth_provider.py  mcp_oauth_state_store.py  mcp_session_middleware.py  oauth21_session_store.py  oauth_common_handlers.py  oauth_config.py  oauth_error_handling.py  scopes.py
